# firmware

./: .clang-format  .drone.yml  .gitignore  .gitmodules  .travis.yml  Brewfile  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ISSUE_TEMPLATE  LICENSE  MACRO_DOCS.md  README.md  VERSIONING.md  build.sh  firmware.code-workspace  gcc-arm-embedded.rb  led-mapping.txt  mcux_include.json  mcuxsdk.code-workspace  nrfsdk.code-workspace  package.json  release-firmware  west.yml  west_mcuxsdk.yml  west_nrfsdk.yml
device/: .clang-format  CMakeLists.txt  CMakePresets.json  Kconfig  pm_static.yml  prj.conf  prj_release.conf  sysbuild.conf
device/child_image/: mcuboot.conf  uhk-80-left.mcuboot.conf  uhk-80-right.mcuboot.conf  uhk-dongle.mcuboot.conf
device/patches/: patch-all.sh  readme.md  stash-patches.sh
device/patches/boot-serial-wait-for-dfu-always/: patch.diff  patch.sh  readme.md
device/patches/delete-default-mcuboot-key-warning/: patch.diff  patch.sh  readme.md
device/patches/mcuboot-usb-dfu-bcd-device-id/: patch.diff  readme.md
device/patches/remove-assert-warning/: patch.diff  patch.sh  readme.md
device/patches/remove-mcuboot-warnings/: patch.diff  patch.sh
device/patches/zephyr-invalid-conversion-udc-data-api/: patch.diff  readme.md
device/patches/zephyr-no-sources-given-lib-libc-common/: patch.diff  patch.sh  readme.md
device/prj.conf.overlays/: ble-hid.conf  ble_hid.conf  ble_nus.conf  ble_nus_client.conf  c2usb.conf  nrf_shared.conf  right.conf  uhk-60-v1-right.prj.conf  uhk-60-v2-right.prj.conf  uhk-80-left.prj.conf  uhk-80-right.conf  uhk-80-right.prj.conf  uhk-80.conf  uhk-dongle.prj.conf
device/src/: CMakeLists.txt  bluetooth.c  bt_advertise.c  bt_advertise.h  bt_central_uart.c  bt_central_uart.h  bt_conn.c  bt_conn.h  bt_health.c  bt_health.h  bt_hid.c  bt_hid.h  bt_manager.c  bt_manager.h  bt_pair.c  bt_pair.h  bt_peripheral_uart.c  bt_peripheral_uart.h  bt_scan.c  bt_scan.h  central_uart.c  central_uart.h  charger.h  connections.c  connections.h  debug_eventloop_timing.c  debug_eventloop_timing.h  device.h  device_state.c  device_state.h  dongle_leds.c  dongle_leds.h  flash.c  flash.h  key_scanner.c  key_scanner.h  leds.c  leds.h  link_protocol.h  logger.c  (+45 more)
device/src/keyboard/: README.md  battery_calculator.c  battery_manager.c  battery_manager.h  battery_percent_calculator.c  battery_percent_calculator.h  battery_unloaded_calculator.c  battery_unloaded_calculator.h  battery_window_calculator.c  battery_window_calculator.h  charger.c  charger.h  i2c.c  i2c.h  i2c_compatibility.h  input_interceptor.c  input_interceptor.h  key_layout.c  key_layout.h  key_scanner.c  key_scanner.h  leds.c  leds.h  legacy_ports.h  logger.c  logger.h  merge_sensor.c  oled.c  power.c  (+17 more)
device/sysbuild/: mcuboot.conf
left/: CMakeLists.txt  Makefile  README.md  main.c  main.h  prj.conf  sysbuild
left/src/: bootloader.c  bootloader.h  bootloader_config.c  bridge_protocol_handler.c  bridge_protocol_handler.h  clock_config.c  clock_config.h  config.h  debug_over_spi.c  debug_over_spi.h  i2c_watchdog.c  i2c_watchdog.h  init_clock.c  init_peripherals.c  init_peripherals.h  init_peripherials.c  init_peripherials.h  iso_jumper.c  iso_jumper.h  key_scanner.c  key_scanner.h  led_pwm.c  led_pwm.h  main.c  main.h  module.c  module.h  slave_protocol_handler.c  slave_protocol_handler.h  test_led.c  test_led.h
nordic/: CMakeLists.txt  CMakePresets.json  prj.conf
nordic-left/: CMakeLists.txt  CMakePresets.json  c2usb  nrf52840dk_nrf52840.overlay  prj.conf
nordic-left/prj.conf.overlays/: uhk-80-left.prj.conf
nordic-left/src/: bluetooth.c  bluetooth.h  command_app.cpp  command_app.hpp  keyboard_app.hpp  main.c  main.cpp  mouse_app.cpp  mouse_app.hpp  usb.c  usb.cpp  usb.h  usb.hpp
nordic/prj.conf.overlays/: uhk-60-v1-right.prj.conf  uhk-60-v2-right.prj.conf  uhk-80-left.prj.conf  uhk-80-right.prj.conf
nordic/src/: bluetooth.c  main.cpp  usb.cpp  usb.hpp
right/: CMakeLists.txt  CMakePresets.json  Kconfig  Kconfig.device  Makefile  README.md  composite.c  composite.h  composite_app.c  composite_app.h  hardware_init.c  hid_generic.c  hid_generic.h  hid_keyboard.c  hid_keyboard.h  hid_mouse.c  hid_mouse.h  keyboard.c  keyboard.h  keyboard_descriptors.c  keyboard_descriptors.h  main.c  main.h  module.h  mouse.c  mouse.h  prj.conf  right.mk  scancodes.h  uhk60v1.mk  uhk60v2.mk  usb_api.h  usb_class_generic_hid.c  usb_class_generic_hid.h  usb_class_keyboard.c  usb_class_keyboard.h  usb_class_mouse.c  usb_class_mouse.h  usb_composite_device.c  usb_composite_device.h  (+32 more)
right/include/: README.md
right/src/: CMakeLists.txt  action.c  action.h  bridge_protocol_scheduler.c  bridge_protocol_scheduler.h  bridge_slave_led_driver_handler.c  bridge_slave_led_driver_handler.h  bt_defs.h  calendar.c  calendar.h  caret_config.c  caret_config.h  config.h  config_buffer.h  config_manager.c  config_manager.h  connection.h  current_keymap.c  current_keymap.h  debug.c  debug.h  default_layout.c  default_layout.h  deserialize.c  deserialize.h  eeprom.c  eeprom.h  event_scheduler.c  event_scheduler.h  heatmap.c  heatmap.h  host_connection.c  host_connection.h  i2c.c  i2c.h  i2c_error_logger.c  i2c_error_logger.h  i2c_watchdog.c  i2c_watchdog.h  init_clock.c  (+166 more)
right/sysbuild/: CMakeLists.txt
right/uhk60v1/: Makefile
right/uhk60v2/: Makefile
shared/: .gitignore  CMakeLists.txt  README.md  atomicity.h  attributes.h  bool_array_converter.c  bool_array_converter.h  bootloader.c  bootloader.h  bridge_protocol.h  buffer.c  buffer.h  crc16.c  crc16.h  device.h  fallback_versions.c  i2c_adddresses.c  i2c_addresses.c  i2c_addresses.h  kboot.c  kboot.h  key_matrix.c  key_matrix.h  key_vector.c  key_vector.h  slave_protocol.c  slave_protocol.h  uart_defs.h  uart_parser.c  uart_parser.h  versioning.h  versions.h
shared/device/: device.h
shared/module/: CMakeLists.txt  i2c.h  i2c_watchdog.c  i2c_watchdog.h  init_peripherals.c  init_peripherals.h  key_scanner.c  key_scanner.h  led_pwm.c  led_pwm.h  main.c  module.h  slave_protocol_handler.c  slave_protocol_handler.h  test_led.h  uart.c  uart.h
(+981 files in other folders)
